Colelction page product card alignment fixes

--- a/assets/collection-page.css
+++ b/assets/collection-page.css
@@ -69,3 +69,19 @@
         margin: 0 -45px;
     }
 }
+
+
+.main-collection .collection-container .products.collection li.column, 
+.main-collection .collection-container .products.collection li.column product-card.product-card{
+    display: flex;
+    flex: 1 1 auto;
+    flex-direction: column;
+}
+.main-collection .collection-container .products.collection li.column product-card.product-card .product-card-info{
+    display: flex;
+    flex: 1 1 auto;
+    flex-direction: column;
+}
+.main-collection .collection-container .products.collection li.column product-card.product-card .product-card-info a.product-card-title{
+    flex: 1 1 auto;
+}
